force-app/main/default/objects/Account/fields/Portfolio_Class__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Class__c</fullName>
    <label>Portfolio Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landing</fullName>
            </value>
            <value>
                <fullName>Expanding</fullName>
            </value>
            <value>
                <fullName>Optimizing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>