force-app/main/default/objects/Account/fields/Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>